# SurveyProject

./: db.sqlite3  pyproject.toml
SurveyProject/: settings.py  urls.py
a_home/: urls.py  views.py
a_home/templates/: result.html  survey.html  survey_done.html
a_questions/: admin.py  apps.py  models.py
a_questions/migrations/: 0001_initial.py
a_users/: forms.py  models.py  urls.py  views.py
a_users/migrations/: 0001_initial.py  0002_custonmuser_ages_custonmuser_gender_and_more.py  0003_rename_custonmuser_customuser.py  0004_alter_customuser_ages_alter_customuser_gender.py
a_users/templates/: userInfo.html
templates/: base.html  home.html  users.html
templates/includes/: header.html
templates/layouts/: blank.html
