[tool.poetry]
name = "surveyproject"
version = "0.1.0"
description = ""
authors = ["Hyunminmax <hyunmin.shin81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pandas = "^2.2.1"
plotly = "^5.19.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
